added client list handlers
